Final attempt to make aha 1542A working.  If not, oh well, I don't have the card and no way to reproduce problems.  We do this by applying the workaround to firmware revsion 0.

PR: 14334


git-svn-id: svn+ssh://svn.freebsd.org/base/head@140025 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f